--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,38 @@
-@import '~bootstrap/scss/bootstrap'
+@import '~bootstrap/scss/bootstrap';
+
+
+body {
+    font-family: 'PT Sans Narrow', sans-serif;
+}
+
+#more {
+    background-color: #0282F9;
+    padding: 0.5rem;
+
+    a {
+        text-decoration: none;
+        color: white;
+        font-weight: bold;
+    }
+}
+
+#navigation {
+    background-color: white;
+
+    nav {
+        color: #1c1c1c;
+        font-weight: bold;
+
+        a:hover {
+            color: #0282F9;
+            transition: 0.4s;
+            border-bottom: 2px solid #0282F9;
+            margin-bottom: -2px;
+        }
+    }
+
+    #search {
+        border: none;
+        border-bottom: 1px solid #0282F9;
+    }
+}
