first part footer complete

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -101,3 +101,17 @@ body {
         font-weight: bold;
     }
 }
+
+#icons_links {
+    background-color: #0282F9;
+    padding: 1rem;
+
+    img {
+        width: 72px;
+
+    }
+
+    #locator {
+        width: 48px;
+    }
+}
